<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodActivity">

    <ImageView
        android:id="@+id/foodImage"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.507"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.114"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/nameTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/name_title"
        app:layout_constraintBottom_toTopOf="@+id/dateInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.177"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodImage"
        app:layout_constraintVertical_bias="0.597" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameInputLayout"
        android:layout_width="243dp"
        android:layout_height="73dp"
        app:layout_constraintBottom_toTopOf="@+id/dateInput"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/nameTitle"
        app:layout_constraintTop_toBottomOf="@+id/foodImage"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameInput"
            android:layout_width="216dp"
            android:layout_height="45dp"
            android:inputType="textShortMessage" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/dateTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="40dp"
        android:text="@string/date"
        app:layout_constraintBottom_toTopOf="@+id/categoryTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.176"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nameTitle"
        app:layout_constraintVertical_bias="0.4" />

    <EditText
        android:id="@+id/dateInput"
        android:layout_width="162dp"
        android:layout_height="46dp"
        android:ems="10"
        android:inputType="date"
        app:layout_constraintBottom_toTopOf="@+id/categoryTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/dateTitle"
        app:layout_constraintTop_toBottomOf="@+id/foodImage"
        app:layout_constraintVertical_bias="0.856" />

    <TextView
        android:id="@+id/categoryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cuisine_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.242"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/foodImage"
        app:layout_constraintVertical_bias="0.426" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/categoryInputLayout"
        android:layout_width="230dp"
        android:layout_height="75dp"
        app:layout_constraintBottom_toTopOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.027"
        app:layout_constraintStart_toEndOf="@+id/categoryTitle"
        app:layout_constraintTop_toBottomOf="@+id/foodImage"
        app:layout_constraintVertical_bias="0.904">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/categoryInput"
            android:layout_width="match_parent"
            android:layout_height="46dp" />
    </com.google.android.material.textfield.TextInputLayout>

    <RatingBar
        android:id="@+id/foodRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/categoryTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.186"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.68" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        app:layout_constraintBottom_toBottomOf="@+id/categoryTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.23"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.737" />

</androidx.constraintlayout.widget.ConstraintLayout>