<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:id="@+id/imageRow1"
            android:layout_width="183dp"
            android:layout_height="235dp">

            <ImageView
                android:id="@+id/imageButterChicken"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@mipmap/ic_butter_chicken" />

            <ImageView
                android:id="@+id/imageIceCream"
                android:layout_width="200dp"
                android:layout_height="200dp"
                app:srcCompat="@mipmap/ic_cookie_dough_icecream" />

        </TableRow>

        <TableRow
            android:id="@+id/tittleRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleButterChicken"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/butter_chicken" />

            <TextView
                android:id="@+id/titleIceCream"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ice_cream" />
        </TableRow>

        <TableRow
            android:id="@+id/ratingRow1"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/rating1_ButterChicken"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ratingTitle1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/rating" />

                <RatingBar
                    android:id="@+id/ratingBarButterChick"
                    style="@android:style/Widget.DeviceDefault.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:stepSize="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rating1_IceCream"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ratingTitle2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:gravity="center"
                    android:text="@string/rating" />

                <RatingBar
                    android:id="@+id/ratingBarIcecream"
                    style="@android:style/Widget.DeviceDefault.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:stepSize="1" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:id="@+id/imageRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageGnocchi"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@mipmap/ic_gnocchi" />

            <ImageView
                android:id="@+id/imageWrap"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="15dp"
                app:srcCompat="@mipmap/ic_souvlaki_wrap" />

        </TableRow>

        <TableRow
            android:id="@+id/tittleRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/titleGnocchi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/gnocchi" />

            <TextView
                android:id="@+id/tittleWrap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/wrap" />
        </TableRow>

        <TableRow
            android:id="@+id/ratingRow2"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/rating2_Gnocchi"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ratingTitle3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:text="@string/rating" />

                <RatingBar
                    android:id="@+id/ratingBarGnocchi"
                    style="@android:style/Widget.DeviceDefault.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:stepSize="1" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/rating2_Wrap"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/ratingTitle4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    android:gravity="center"
                    android:text="@string/rating" />

                <RatingBar
                    android:id="@+id/ratingBarWrap"
                    style="@android:style/Widget.DeviceDefault.RatingBar.Small"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:isIndicator="false"
                    android:numStars="5"
                    android:stepSize="1" />
            </LinearLayout>

        </TableRow>

    </TableLayout>

</androidx.constraintlayout.widget.ConstraintLayout>